update the urls

--- a/artifact.html
+++ b/artifact.html
@@ -334,8 +334,8 @@ a.sourceLine {
 <div id="datasets-tools-and-scripts" class="section level3">
 <h3>Datasets, Tools, and Scripts</h3>
 <ul>
-<li><a href="/s03/violation-analysis.html">HTML</a></li>
-<li><a href="/s03/violation-analysis.Rmd">RMD</a></li>
+<li><a href="s03/violation-analysis.html">HTML</a></li>
+<li><a href="s03/violation-analysis.Rmd">RMD</a></li>
 </ul>
 </div>
 </div>
