--- a/artifact.html
+++ b/artifact.html
@@ -355,7 +355,7 @@ a.sourceLine {
 <h3>Scripts</h3>
 <ul>
 <li><a href="s03/violation-analysis.Rmd">RMD</a></li>
-<li><a href="hs03/violation-analysis.html">HTML</a></li>
+<li><a href="s03/violation-analysis.html">HTML</a></li>
 </ul>
 </div>
 </div>
